--- a/Basic_NN.ipynb
+++ b/Basic_NN.ipynb
@@ -6,7 +6,8 @@
       "name": "Untitled3.ipynb",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,14 +16,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/bartosz-paternoga/ML_algos_py/blob/master/Basic_NN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "metadata": {
         "id": "nr-6xCbm4xWu",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 101
+          "height": 235
         },
-        "outputId": "406a6f36-592f-4da8-844e-836b817ccb82"
+        "outputId": "a77fa483-2e85-4832-ac5f-a69495efe3a9"
       },
       "cell_type": "code",
       "source": [
@@ -49,6 +60,8 @@
         "\n",
         "# initialize weights randomly with mean 0\n",
         "syn0 = 2*np.random.random((3,1)) - 1\n",
+        "print (\"initialized weights -> syn0:\")\n",
+        "print (syn0)\n",
         "\n",
         "for iter in range(10000):\n",
         "\n",
@@ -67,18 +80,29 @@
         "    syn0 += np.dot(l0.T,l1_delta)\n",
         "\n",
         "print (\"Output After Training:\")\n",
-        "print (l1)\n"
+        "print (l1)\n",
+        "\n",
+        "print (\"final weigths -> syn0:\")\n",
+        "print (syn0)"
       ],
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "initialized weights -> syn0:\n",
+            "[[-0.16595599]\n",
+            " [ 0.44064899]\n",
+            " [-0.99977125]]\n",
             "Output After Training:\n",
             "[[0.00966449]\n",
             " [0.00786506]\n",
             " [0.99358898]\n",
-            " [0.99211957]]\n"
+            " [0.99211957]]\n",
+            "final weigths -> syn0:\n",
+            "[[ 9.67299303]\n",
+            " [-0.2078435 ]\n",
+            " [-4.62963669]]\n"
           ],
           "name": "stdout"
         }
