--- a/Basic_NN.ipynb
+++ b/Basic_NN.ipynb
@@ -29,40 +29,137 @@
       "metadata": {
         "id": "nr-6xCbm4xWu",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        },
-        "outputId": "a77fa483-2e85-4832-ac5f-a69495efe3a9"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "\n",
+        "import numpy as np"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "h19Yh73hfPJq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "# sigmoid function\n",
         "def nonlin(x,deriv=False):\n",
         "    if(deriv==True):\n",
         "        return x*(1-x)\n",
-        "    return 1/(1+np.exp(-x))\n",
-        "    \n",
+        "    return 1/(1+np.exp(-x))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kWNnhyypfQCZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "# input dataset\n",
         "X = np.array([  [0,0,1],\n",
         "                [0,1,1],\n",
         "                [1,0,1],\n",
-        "                [1,1,1] ])\n",
-        "    \n",
-        "# output dataset            \n",
+        "                [1,1,1] ])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "9pZv921qfQXB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "c5008fd8-5e90-44ef-ff33-953a99de3085"
+      },
+      "cell_type": "code",
+      "source": [
+        "#output dataset            \n",
         "y = np.array([[0,0,1,1]]).T\n",
-        "\n",
+        "print(y)"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0]\n",
+            " [0]\n",
+            " [1]\n",
+            " [1]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "h5mbJAqMfQ0J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "# seed random numbers to make calculation\n",
         "# deterministic (just a good practice)\n",
-        "np.random.seed(1)\n",
-        "\n",
+        "np.random.seed(1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "UwVdJMZefRD5",
+        "colab_type": "code",
+        "outputId": "2d008bca-df30-4e83-dfc1-f376357e66c0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "cell_type": "code",
+      "source": [
         "# initialize weights randomly with mean 0\n",
         "syn0 = 2*np.random.random((3,1)) - 1\n",
         "print (\"initialized weights -> syn0:\")\n",
-        "print (syn0)\n",
-        "\n",
+        "print (syn0)"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "initialized weights -> syn0:\n",
+            "[[-0.16595599]\n",
+            " [ 0.44064899]\n",
+            " [-0.99977125]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "-H9yMVA3fRSJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "92cd465e-c8f3-43eb-a3d4-3453518d63f6"
+      },
+      "cell_type": "code",
+      "source": [
         "for iter in range(10000):\n",
         "\n",
         "    # forward propagation\n",
@@ -85,15 +182,11 @@
         "print (\"final weigths -> syn0:\")\n",
         "print (syn0)"
       ],
-      "execution_count": 22,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "initialized weights -> syn0:\n",
-            "[[-0.16595599]\n",
-            " [ 0.44064899]\n",
-            " [-0.99977125]]\n",
             "Output After Training:\n",
             "[[0.00966449]\n",
             " [0.00786506]\n",
