--- a/Basic_NeuralNets_numpy/7Basic_NN_2layers_relu.ipynb
+++ b/Basic_NeuralNets_numpy/7Basic_NN_2layers_relu.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 161986
         },
-        "outputId": "82974e06-3605-44e8-8016-42351f740825"
+        "outputId": "c50d4425-4d7a-43db-b295-994b73ac3288"
       },
       "cell_type": "code",
       "source": [
@@ -65,6 +65,7 @@
         "      print(\"layer_0\",\"\\n\",layer_0,\"\\n\")\n",
         "      layer_1 = relu(np.dot(layer_0,weights_0_1))\n",
         "      print(\"layer_1 before relu\",\"\\n\",np.dot(layer_0,weights_0_1),\"\\n\")\n",
+        "      print(\"layer_1 after relu\",\"\\n\",layer_1,\"\\n\")\n",
         "      layer_2 = np.dot(layer_1,weights_1_2)\n",
         "      print(\"layer_2\",\"\\n\",layer_2,\"\\n\")\n",
         "      \n",
@@ -89,7 +90,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 48,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
