--- a/MNIST_numpy/MNIST_stochasticGD.ipynb
+++ b/MNIST_numpy/MNIST_stochasticGD.ipynb
@@ -21,7 +21,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_train \n",
+      "x_train[0] \n",
       " [[  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "    0   0   0   0   0   0   0   0   0   0]\n",
       " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
@@ -78,7 +78,7 @@
       "    0   0   0   0   0   0   0   0   0   0]\n",
       " [  0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "    0   0   0   0   0   0   0   0   0   0]]\n",
-      "y_train \n",
+      "y_train[0] \n",
       " 5\n"
      ]
     }
