--- a/Word_Embeddings/02_Filling_the_blank.ipynb
+++ b/Word_Embeddings/02_Filling_the_blank.ipynb
@@ -19,27 +19,23 @@
       "metadata": {
         "id": "lZG1pfRsJraI",
         "colab_type": "code",
+        "outputId": "56e2cb60-2c9c-4a6f-f105-59ae806d5349",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
-        },
-        "outputId": "5bcf1c2b-01e1-4a09-c05c-b675f12af391"
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -211,7 +207,7 @@
       "metadata": {
         "id": "soNvF_FOToSX",
         "colab_type": "code",
-        "outputId": "2e5ac4e7-68ac-4f68-d12d-96e3640f2555",
+        "outputId": "b5aba619-7733-4116-acee-0df8cb74a69e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -266,14 +262,122 @@
         "        *iterations)))\n",
         "print(similar('terrible'))"
       ],
-      "execution_count": 7,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Progress:0.99998[('terrible', -0.0), ('horrible', -2.9619505315492067), ('brilliant', -3.448479630886247), ('mediocre', -3.7561402059622595), ('superb', -3.764602798538214), ('phenomenal', -3.8376770826096203), ('pathetic', -3.8474707652398283), ('great', -3.8954507232213773), ('dreadful', -4.062210317422653), ('remarkable', -4.0783091929144994)]\n"
+            "Progress:0.99998[('terrible', -0.0), ('horrible', -2.837961943620891), ('brilliant', -3.315748259479727), ('pathetic', -3.710499081094305), ('phenomenal', -3.8805091413471375), ('superb', -3.9321942109888663), ('masterful', -4.008631188797156), ('marvelous', -4.027031483873774), ('bad', -4.168746995394487), ('mediocre', -4.171162275142603)]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Rh6G1PvSaRt7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def analogy(positive=['terrible','good'],negative=['bad']):\n",
+        "    \n",
+        "    norms = np.sum(weights_0_1 * weights_0_1,axis=1)  #norms.shape: (74075,)\n",
+        "    norms.resize(norms.shape[0],1)                    #norms.shape: (74075,1)\n",
+        "    \n",
+        "    normed_weights = weights_0_1 * norms              #normed_weights.shape: (74075, 50)\n",
+        "    \n",
+        "    query_vect = np.zeros(len(weights_0_1[0]))        #query_vect.shape: (50,)             \n",
+        "    for word in positive:\n",
+        "        query_vect += normed_weights[word2index[word]]\n",
+        "    for word in negative:\n",
+        "        query_vect -= normed_weights[word2index[word]]\n",
+        "    \n",
+        "    scores = Counter()\n",
+        "    for word,index in word2index.items():\n",
+        "        raw_difference = weights_0_1[index] - query_vect\n",
+        "        squared_difference = raw_difference * raw_difference\n",
+        "        scores[word] = -math.sqrt(sum(squared_difference))\n",
+        "        \n",
+        "    return scores.most_common(10)[1:]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "hdcKy6zBawPz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "0f3c5202-999a-42c6-8c86-ad050a1dd8d2"
+      },
+      "cell_type": "code",
+      "source": [
+        "analogy(['terrible','good'],['bad'])"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('superb', -228.34456870776566),\n",
+              " ('terrific', -228.70569482944066),\n",
+              " ('decent', -228.74701630196162),\n",
+              " ('fine', -228.8679146966459),\n",
+              " ('worth', -229.09171792640853),\n",
+              " ('perfect', -229.2521204295804),\n",
+              " ('terrible', -229.25772311608353),\n",
+              " ('brilliant', -229.33438733611763),\n",
+              " ('nice', -229.3379231820506)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "eXcfBvPHa3F4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "d53ec02f-bb14-4c42-89ca-ffc47b8f2b31"
+      },
+      "cell_type": "code",
+      "source": [
+        "analogy(['elizabeth','he'],['she'])"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('christopher', -195.41602989199606),\n",
+              " ('william', -196.01259436674897),\n",
+              " ('tom', -196.15649856894723),\n",
+              " ('peter', -196.18815118003366),\n",
+              " ('david', -196.25515641119836),\n",
+              " ('mr', -196.2729249372318),\n",
+              " ('fred', -196.31070497550388),\n",
+              " ('john', -196.35552122993),\n",
+              " ('this', -196.38942812390533)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
         }
       ]
     }
